crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__runtime__external-function-2-arg-v2.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/runtime/external-function-2-arg-v2
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "The value is 7.\n" [Ended]
outcome: Ended
