crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__runtime__jump-knot.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/runtime/jump-knot
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "" [Done]
outcome: Done
