crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__runtime__multiflow-saveloadthreads.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/runtime/multiflow-saveloadthreads
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Default line 1\n" [Continue]
> "Default line 2\n" [Done]
outcome: Done
