crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__runtime__read-visit-counts.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/runtime/read-visit-counts
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "" [Ended]
outcome: Ended
